--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
     "resend": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
