--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.0.10",
     "@auth/prisma-adapter": "^1.0.12",
+    "@openrouter/ai-sdk-provider": "^1.1.2",
     "@prisma/client": "^5.16.2",
     "@tailwindcss/typography": "^0.5.16",
     "ai": "^4.0.21",
